integrate API on client and fix bug

--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,14 @@ client/node_modules
 client/.pnp
 client.pnp.js
 
+server/node_modules
+
 # testing
 client/coverage
 
 # production
 client/build
+server/dist
 
 client/npm-debug.log*
 client/yarn-debug.log*
