--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-session": "^1.17.3",
     "mongoose": "^6.2.10"
