--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "nodemon --exec \"npm run build && node dist\" --watch src/",
+    "start": "nodemon --exec \"node . \" --watch .",
     "watch": "node-sass -w src/resources/scss -o src/public/css",
     "build": "babel src -D --out-dir dist",
     "test": "echo \"Error: no test specified\" && exit 1"
